# srvctl

./: Cargo.toml  README.md
examples/controller-output/: endpoint-slice.yaml  endpoints.yaml  service.yaml
install/: crd-install.yaml  sample-srvresolver.yaml
src/: crd.rs  dns.rs  lib.rs  main.rs
src/k8s/: endpoints.rs  mod.rs
