[package]
name = "k8s-srvcon"
version = "0.1.0"
authors = ["Adam Margherio <margherio.adam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
clap = "3.0.0-beta.1"
env_logger = "0.7"
futures = "0.3"
kube = "0.35.1"
kube-derive = "0.35.1"
k8s-openapi = { version = "0.8", default-features = false , features = ["v1_17"] }
tokio = { version = "0.2", features = ["full"] }
trust-dns-client = "0.19"
trust-dns-resolver = "0.19"
url = "2.1"