[package]
name = "srvctl"
version = "0.1.0"
authors = ["Adam Margherio <margherio.adam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "3.0.0-beta.1"
env_logger = "0.8.3"
futures = "0.3"
kube = "0.50.1"
kube-derive = "0.50.1"
kube-runtime = "0.50.1"
k8s-openapi = { version = "0.11.0", default-features = false , features = ["v1_17"] }
log = "0.4.14"
serde = "1.0.123"
serde_json = "1.0.63"
serde_yaml = "0.8.17"
toml = "0.5.8"
tokio = { version = "1.2.0", features = ["full"] }
trust-dns-client = { version = "0.20", default-features = false }
trust-dns-resolver = "0.20"
url = "2.2.1"
